--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "proj01",
+  "appId": "luferat.com.github.amarfagafos",
+  "appName": "amarfagafos",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
