--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amarfagafos",
+  "name": "marfagafos",
   "version": "1.0.0",
   "author": "André Luferat",
   "homepage": "https://github.com/Luferat/",
