--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,8 +6,11 @@
   "webDir": "www",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 3000
-    }
+      "launchShowDuration": 0,
+      "launchAutoHide": true,
+      "backgroundColor": "#ffffffff"
+      }
   },
   "cordova": {}
 }
+
